TrumpetSurfaceView设置背景透明

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
   <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:background="@color/colorPrimary"
+      android:background="#03A9F4"
       />
 
   <com.sendi.trumpet.view.TrumpetSurfaceView
