--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/root"
     tools:context=".MainActivity">
 
   <FrameLayout
@@ -16,13 +17,23 @@
       android:id="@+id/danmuView"
       android:layout_width="match_parent"
       android:layout_height="250dp"/>
+  <Button
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintLeft_toLeftOf="parent"
+      android:layout_marginLeft="100dp"
+      android:layout_marginTop="100dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"/>
+  <FrameLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"/>
 
   <Button
     android:id="@+id/btn_add_one"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
+
     app:layout_constraintBottom_toBottomOf="parent"
     android:text="添加一条弹幕"
     />
@@ -35,5 +46,14 @@
       app:layout_constraintBottom_toBottomOf="parent"
       android:text="添加很多条弹幕"
       />
+
+  <Button
+      android:id="@+id/btn_to_test"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      app:layout_constraintLeft_toRightOf="@id/btn_add_more"
+      app:layout_constraintBottom_toBottomOf="parent"
+      />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
